# shuflr

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.github/workflows/: ci.yml  release-binaries.yml  release-crates.yml  release-pypi.yml
crates/shuflr/: Cargo.toml  README.md
crates/shuflr-cli/: Cargo.toml  README.md
crates/shuflr-cli/src/: cli.rs  commands.rs  exit.rs  main.rs  progress.rs
crates/shuflr-cli/tests/: cli.rs  serve_http.rs  serve_tls.rs  serve_wire.rs
crates/shuflr-client/: Cargo.toml  README.md  pyproject.toml
crates/shuflr-client/benches/: bench_protocols.py
crates/shuflr-client/python/shuflr_client/: __init__.py  _shuflr_client_native.pyi
crates/shuflr-client/scripts/: test.sh
crates/shuflr-client/src/: lib.rs
crates/shuflr-client/tests/: test_http.py  test_transports.py
crates/shuflr-wire/: Cargo.toml  README.md
crates/shuflr-wire/src/: codec.rs  error.rs  lib.rs  message.rs
crates/shuflr-wire/tests/: roundtrip.rs
crates/shuflr/benches/: throughput.rs
crates/shuflr/src/: analyze.rs  error.rs  framing.rs  index.rs  json_validate.rs  lib.rs  parquet_input.rs  sampling.rs  seed.rs
crates/shuflr/src/io/: magic.rs  mod.rs
crates/shuflr/src/io/zstd_seekable/: mod.rs  parallel.rs  reader.rs  record_index.rs  seek_table.rs  verify.rs  writer.rs
crates/shuflr/src/pipeline/: buffer.rs  chunk_shuffled.rs  index_perm.rs  index_perm_zstd.rs  mod.rs  passthrough.rs  reservoir.rs
crates/shuflr/src/serve/: auth.rs  catalog.rs  http.rs  mod.rs  tls.rs  wire.rs
crates/shuflr/tests/: passthrough_roundtrip.rs  rank_disjoint.rs
docs/bench/: 001-edgar-31gb-gzip.md  002-protocols.md
docs/design/: 001-initial-plan.md  002-revised-plan.md  003-compression-formats.md  004-convert-subcommand.md  005-serve-multi-transport.md
docs/design/review-01/: 01-systems-perf.md  02-ml-practitioner.md  03-distributed-systems.md  04-rust-architect.md  05-security.md  06-correctness-stats.md  07-cli-ux.md
examples/pytorch/: README.md  shuflr_dataset.py
tests/corpora/: tiny.jsonl
