[package]
name = "shuflr-client"
description = "Python client for shuflr over HTTP / shuflr-wire / gRPC (Rust core via pyo3)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"
# Distributed as a Python wheel on PyPI; the Rust crate is not
# published to crates.io.
publish = false

[lints]
workspace = true

[lib]
name = "_shuflr_client_native"
# cdylib so maturin can build a Python extension module (.so / .pyd).
# rlib so the tokio-agnostic integration tests can link the crate too.
crate-type = ["cdylib", "rlib"]

[dependencies]
# pyo3 builds the Python extension module. `abi3-py39` means we ship
# one wheel that loads on Python 3.9+ without per-version rebuilds.
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py39"] }
# Blocking HTTP/1.1 client. No tokio, no async. One crate, few deps —
# important for wheel size and for compatibility with PyTorch's
# multiprocessing workers (no runtime to fork across).
ureq = { version = "2", default-features = false, features = ["gzip", "tls"] }
url = "2"
thiserror = "2"
# Binary wire transport (005 §2.2). Pulls in only codec + thiserror
# + xxh3 — no tokio, no TLS — so the wheel stays lean.
shuflr-wire = { path = "../shuflr-wire", version = "0.1" }
# JSON (de)serialization for OpenStream / StreamOpened payloads.
# Lives inside the codec's opaque bytes; server uses the same crate.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
# Raw-frame passthrough (005 §3.5): decompress server-sent zstd
# frames locally, then replay Fisher-Yates with the server-derived
# ChaCha20 seed.
zstd = "0.13"
memchr = "2"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3"

[dev-dependencies]
# Spawn a real server binary in integration tests.
shuflr = { path = "../shuflr", version = "0.1", features = ["serve"] }
tempfile = "3"
