[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "shuflr-client"
version = "0.1.0"
description = "Python client for shuflr — HTTP NDJSON and shuflr-wire/1 binary transports"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Michael Bommarito", email = "michael.bommarito@gmail.com" }]
requires-python = ">=3.9"
keywords = ["jsonl", "shuffle", "streaming", "training-data", "pytorch"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Distributed Computing",
]

[project.urls]
Homepage = "https://github.com/mjbommar/shuflr"
Repository = "https://github.com/mjbommar/shuflr"
Issues = "https://github.com/mjbommar/shuflr/issues"

[project.optional-dependencies]
torch = ["torch"]
test = ["pytest>=8"]

[tool.maturin]
# Python package lives under `python/shuflr_client`; the compiled
# extension module attaches as `shuflr_client._shuflr_client_native`.
python-source = "python"
module-name = "shuflr_client._shuflr_client_native"
# abi3 → one wheel for py39+.
features = ["pyo3/extension-module"]
