[package]
name = "shuflr"
description = "Streaming shuffled JSONL: chunk pool, shuffle algorithms, I/O, sinks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/shuflr"
readme = "README.md"
keywords = ["jsonl", "shuffle", "streaming", "training-data", "zstd"]
categories = ["command-line-utilities", "data-structures", "filesystem"]

[lints]
workspace = true

[features]
default = []
# HTTP transport for the `serve` subcommand (005). Brings in tokio +
# hyper (HTTP/1.1 only), rustls for TLS, and constant-time token
# comparison. TLS is always compiled in — users who enable `serve`
# can still run without TLS (plain HTTP on loopback is the default).
serve = [
    "dep:tokio",
    "dep:hyper",
    "dep:hyper-util",
    "dep:http-body-util",
    "dep:tokio-stream",
    "dep:futures-util",
    "dep:rustls",
    "dep:tokio-rustls",
    "dep:rustls-pemfile",
    "dep:subtle",
    "dep:shuflr-wire",
    "dep:serde",
    "dep:serde_json",
]
# Networked service (gRPC, async runtime).
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]
# Prometheus exporter for --stats.
prom = ["dep:metrics", "dep:metrics-exporter-prometheus"]
# OTLP tracing export.
otlp = ["dep:opentelemetry-otlp"]
# Linux io_uring fast path.
uring = ["dep:io-uring"]
# zstd streaming + seekable (004 promotes to v1).
zstd = ["dep:zstd"]
# gzip streaming input (003 promotes to v1).
gzip = ["dep:flate2"]
# bzip2 streaming input.
bzip2 = ["dep:bzip2"]
# xz/LZMA2 streaming input.
xz = ["dep:xz2"]
# S3 byte-range input (v1.1).
s3 = ["dep:aws-sdk-s3"]
# GCS byte-range input (v1.1).
gcs = ["dep:google-cloud-storage"]
# Linux Landlock + seccomp sandbox.
sandbox = ["dep:landlock", "dep:seccompiler"]
# Parquet + HF Hub input for `shuflr convert`. Adds `arrow` / `parquet`
# for columnar decode and `hf-hub` for `hf://user/repo` URL resolution.
# Brings in serde_json for row-to-JSON serialization at the boundary.
parquet = [
    "dep:parquet",
    "dep:arrow-array",
    "dep:arrow-schema",
    "dep:hf-hub",
    "dep:serde_json",
]

[dependencies]
# Core deps are intentionally few; all feature-gated deps below are optional.
memmap2 = "0.9"
memchr = "2"
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
rand_chacha = "0.3"
blake3 = "1"
crossbeam-channel = "0.5"
bytes = "1"
thiserror = "2"
tracing = "0.1"
num_cpus = "1"

# Feature-gated deps — all optional, pulled in only when a feature enables them.
tonic = { version = "0.12", optional = true }
prost = { version = "0.13", optional = true }
tokio = { version = "1", optional = true, features = ["rt-multi-thread", "sync", "macros", "net", "time", "io-util", "signal", "fs"] }
hyper = { version = "1", optional = true, features = ["server", "http1"] }
hyper-util = { version = "0.1", optional = true, features = ["tokio", "server-auto"] }
http-body-util = { version = "0.1", optional = true }
tokio-stream = { version = "0.1", optional = true }
futures-util = { version = "0.3", optional = true, default-features = false, features = ["std"] }
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "tls12", "ring"] }
tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["tls12", "ring"] }
rustls-pemfile = { version = "2", optional = true }
subtle = { version = "2", optional = true, default-features = false }
shuflr-wire = { path = "../shuflr-wire", version = "0.1", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
serde_json = { version = "1", optional = true }
metrics = { version = "0.23", optional = true }
metrics-exporter-prometheus = { version = "0.15", optional = true }
opentelemetry-otlp = { version = "0.27", optional = true }
io-uring = { version = "0.7", optional = true }
zstd = { version = "0.13", optional = true }
flate2 = { version = "1", optional = true }
bzip2 = { version = "0.5", optional = true }
xz2 = { version = "0.1", optional = true }
aws-sdk-s3 = { version = "1", optional = true }
google-cloud-storage = { version = "0.22", optional = true }
landlock = { version = "0.4", optional = true }
seccompiler = { version = "0.4", optional = true }
# Parquet + HF Hub (feature = "parquet"). `parquet` is pinned to a version
# that uses `arrow` 53.x to keep the transitive dep graph tight; picking
# `default-features = false` avoids pulling in all of arrow by default.
parquet = { version = "53", optional = true, default-features = false, features = ["snap", "zstd", "brotli", "lz4", "arrow"] }
arrow-array = { version = "53", optional = true, default-features = false }
arrow-schema = { version = "53", optional = true, default-features = false }
# Sync ureq-backed HF Hub client; TLS via rustls (no openssl-dev dependency,
# matches the `serve` feature's TLS stack).
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq"] }
ureq = { version = "2", optional = true, default-features = false, features = ["tls", "gzip"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
# Self-signed certs for TLS tests without an external openssl call.
rcgen = "0.13"

[[bench]]
name = "throughput"
harness = false
